syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "HomeModuleComfortInfo.proto";

message HomeComfortInfoNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 4557;
  }

  repeated HomeModuleComfortInfo module_info_list = 1;
}